// Copyright 2020 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipes.build.chromium_speed_processor;

message InputProperties {
  // A JSON string dumpped from a mapping from test group name to the swarming
  // task info.
  string tasks_groups = 1;

  // The build properties of the tester which triggers the current processor.
  string tester_properties = 2;
}
